# probe

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.claude/skills/: ambiguity-auditor.md  code-quality-auditor.md  kb-update.md  test-quality-auditor.md
.cursor/rules/: new-probe.mdc  release-commit.mdc
docs/: CONSUMER_GUIDE.md  SCHEMA.md  TESTING_GUIDE.md  UI-VIEWS.md  atoms_roles_statuses.md  categorical-framework.md  consumer-guide.md  envelope-rationale.md  extract-check-design.md  interchange-spec.md  lean-stats-brainstorm.md  mappings-spec.md  merge-algorithm.md  probes-overview-slides.md  probes_statuses_colours.md  schema-validation.md  slides-lean-verification-landscape.md  testing-guide.md  translations-spec.md  ui-views.md  verification-statuses.md
kb/: index.md
probe-extract-check/: Cargo.toml  TESTING.md
probe-extract-check/src/: dep_checker.rs  golden.rs  lib.rs  main.rs  properties.rs  source_checker.rs  structural.rs
probe-extract-check/tests/: golden_tests.rs
probe-extract-check/tests/fixtures/aeneas_micro/: expected.json
probe-extract-check/tests/fixtures/aeneas_micro/lean_src/: AeneasMicro.lean
probe-extract-check/tests/fixtures/aeneas_micro/rust_src/: Cargo.toml
probe-extract-check/tests/fixtures/aeneas_micro/rust_src/src/: lib.rs
probe-extract-check/tests/fixtures/lean_micro/: expected.json
probe-extract-check/tests/fixtures/lean_micro/LeanMicro/: Basic.lean
probe-extract-check/tests/fixtures/rust_micro/: Cargo.toml  expected.json
probe-extract-check/tests/fixtures/rust_micro/src/: lib.rs  macros.rs  math.rs  shapes.rs  types_only.rs
probe-extract-check/tests/fixtures/verus_micro/: Cargo.toml  expected.json
probe-extract-check/tests/fixtures/verus_micro/src/: lib.rs
schemas/: atom-envelope.schema.json
scripts/: check-kb-links.sh  count-colors.sh  summarize_extract.py
src/: main.rs  types.rs
tests/: merge.rs  merge_atoms.rs  propagate.rs  schema_validation.rs
(+54 files in other folders)
