[package]
name = "probe"
version = "0.1.0"
edition = "2021"
description = "Cross-tool atom merging for probe-* verification tools"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
jsonschema = "0.28"
tempfile = "3"
