[package]
name = "probe-extract-check"
version = "0.1.0"
edition = "2021"
description = "Validates probe extract JSON against source code"
license = "MIT"
repository = "https://github.com/Beneficial-AI-Foundation/probe"

[dependencies]
clap = { version = "4", features = ["derive"] }
probe = { path = ".." }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
